# openvino.genai

samples/cpp/continuous_batching_accuracy/: continuous_batching_accuracy.cpp
samples/cpp/continuous_batching_benchmark/: continuous_batching_benchmark.cpp
samples/cpp/continuous_batching_speculative_decoding/: continuous_batching_speculative_decoding.cpp  speculative_decoding_pipeline.cpp
samples/cpp/speculative_decoding_lm/: speculative_decoding_lm.cpp
src/cpp/include/openvino/genai/: generation_handle.hpp
src/cpp/src/: cache_manager.hpp  continuous_batching_pipeline.cpp  device_config.hpp  generation_handle.cpp  generation_stream.hpp  model_runner.hpp  sampler.hpp  scheduler.hpp  sequence_group.hpp  synchronized_queue.hpp  utils.cpp
tests/cpp/: cache_manager.cpp
text_generation/causal_lm/cpp/: CMakeLists.txt  speculative_decoding_lm.cpp
